# xvc-pico

./: .gitignore  99-programming-adapters.rules  README.md  build_for_windows.sh
.github/workflows/: build_windows.yml
boards/EBAZ4205/: blink.bit
builds/: README.txt
daemon/: CMakeLists.txt  Makefile.extra  formatter.conf  xvcpico.c
firmware/: CMakeLists.txt  Makefile.extra  README.txt  axm.c  axm.h  cmd.c  cmd.h  dirtyJtag.c  dirtyJtag.uf2  get_serial.c  jtag.c  jtag.h  tusb_config.h  usb_descriptors.c  xvcPico.c  xvcPico.h  xvcPico.uf2
